Complete the 2. Recipe page
Create the second step on Odin Project specified in README.me. Create a html page recipe and it's add a link to index.html of the recipe.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
         <body>
             <h1>Odin Recipes</h1>
+            <ul>
+                <li><a href="recipes/hot-ham-cheese-sliders.html" rel="noopener">Hot Ham and Cheese Sliders</a></li>
+            </ul>
         </body>
     </head>
 </html>
