Complete 3. Recipe page content
Recipe's image going to be added to the hot-ham-cheese-sliders.html. Will be added too: Description, Ingredients, Step by Step.

--- a/recipes/hot-ham-cheese-sliders.html
+++ b/recipes/hot-ham-cheese-sliders.html
@@ -7,5 +7,31 @@
 
     <body>
         <h1>Hot Ham and Cheese Sliders</h1>
+
+        <img src="../img/hothamcheesesliders.jpg" alt="Hot ham and cheese sliders">
+        <h2>Description</h2>
+        <p>Nothing says comfort like a <b>ham and cheese slider</b>. Up the ante with a <em>seriously</em> mouthwatering compound butter, soft and fluffy slider buns, and plenty of ooey gooey cheese, and you’ve got a meal that your entire family will want over and over again. Plus, they can be made in less than 30 minutes—just 15 minutes if you prep them in advance—is the cherry on top.</p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Compound butter</li>
+            <li>Swiss cheese.</li>
+            <li>Sliced deli ham.</li>
+            <li>Hawaiian sliders rolls.</li>
+        </ul>
+
+        <h2>Step by step</h2>
+        <ol>
+            <li><p>The herbed compound butter is what turns this dish into something exceptional, and it’s incredibly easy to throw together. All you have to do is mash together softened butter, minced shallots, chopped parsley, and mustard until it becomes a homogenous, spreadable mixture.</p>
+                <p>In my testing, I found that using room temperature butter over melted butter created a crispier, golden brown buns, whereas using melted butter made the sliders feel greasy.</p></li>
+            <li><p>Think of this recipe like a blank canvas that can be tweaked or finessed to your liking. There’s a whole world of toppings and add-ins. Here are just a couple of ideas:</p></li>
+                <ul>
+                    <li><p><strong>To pack in a bit of heat</strong>, slather the inside of the buns with spicy mustard, and you can even sprinkle the ham with chopped pickled jalapeños for a spicy, vinegary bite.</p></li>
+                    <li><p><strong>For added sweetness and acidity</strong> to cut through the rich compound butter, layer on sliced dill pickles.</p></li>
+                </ul>
+            <li><p>All you have to do is pop the sliders into the oven and bake them until they’re hot. The assembled sliders—through step 4—will keep in the fridge, covered, for 24 hours before they’ll start to get soggy.</p> 
+
+                <p>Bake the sliders for 3 to 4 additional minutes covered in foil when they’re cooked cold from the fridge.</p></li>
+        </ol>
     </body>
 </html>
