Upgrade odin-recipes visually
CSS code will be implemented.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en-GB">
     <head>
         <meta charset="en-GB">
+        <link rel="stylesheet" href="styles.css"/>
         <title>Odin Recipes</title>
-
-        <body>
-            <h1>Odin Recipes</h1>
-            <ul>
-                <li><a href="recipes/hot-ham-cheese-sliders.html" rel="noopener">Hot Ham and Cheese Sliders</a></li>
-            </ul>
-        </body>
     </head>
+
+    <body>
+        <h1>Odin Recipes</h1>
+        <!-- <img src="img/theOdinProject.png" rel="The Odin Recipes Logo"> -->
+        <div class="container-list">
+            <ul class="main-list">
+                <li><a href="recipes/hot-ham-cheese-sliders.html" rel="noopener">Hot Ham and Cheese Sliders</a></li>
+                <li><a href="recipes/cream-cheese-zucchini-muffins.html" rel="noopener">Cream Cheese Zucchini Muffins</a></li>
+                <li><a href="recipes/thai-omelet.html" rel="noopener">Thai Omelet</li>
+            </ul>
+        </div>
+    </body>
 </html>
