--- a/recipes/cream-cheese-zucchini-muffins.html
+++ b/recipes/cream-cheese-zucchini-muffins.html
@@ -2,6 +2,7 @@
 <html lang="en-GB">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../styles.css"/>
         <title>Odin Recipes: Hot Ham & Cheese Sliders</title>
     </head>
 
@@ -9,72 +10,74 @@
         <h1>Cream Cheese Zucchini Muffins</h1>
 
         <img src="../img/creamcheesezucchinimuffins.jpg" alt="Cream Cheese Zucchini Muffins">
-        <h2>Description</h2>
-        <p>Zucchini may have a mild flavor, but it adds so much moisture to baked goods—and a fun color, too. Zucchini muffins are soft and moist, deliciously spiced, and incredibly easy to make. But I still think there's a little room for <em>improvement.</em></p>
+        <div class="container-text">
+            <h2>Description</h2>
+            <p>Zucchini may have a mild flavor, but it adds so much moisture to baked goods—and a fun color, too. Zucchini muffins are soft and moist, deliciously spiced, and incredibly easy to make. But I still think there's a little room for <em>improvement.</em></p>
 
-        <p>To take it up a notch, these <b>zucchini muffins</b> feature a sweet and tangy cream cheese filling. Bite into the center of one of these muffins and you’ll reveal a pocket of creamy cheesecake that will make you wonder if you'll ever go back to baking traditional zucchini muffins again. They're not just for breakfast or brunch—they’re dessert worthy.</p>
+            <p>To take it up a notch, these <b>zucchini muffins</b> feature a sweet and tangy cream cheese filling. Bite into the center of one of these muffins and you’ll reveal a pocket of creamy cheesecake that will make you wonder if you'll ever go back to baking traditional zucchini muffins again. They're not just for breakfast or brunch—they’re dessert worthy.</p>
         
-        <h2>Ingredients</h2>
-        <h3>For the cheese filling:</h3>
-        <ul>
-            <li>6 ounces cream cheese, softened.</li>
-            <li>3 tablespoons granulated sugar.</li>
-            <li>1 teaspoon vanilla extract.</li>
-        </ul>
+            <h2>Ingredients</h2>
+            <h3>For the cheese filling:</h3>
+            <ul class="ingredients">
+                <li>6 ounces cream cheese, softened.</li>
+                <li>3 tablespoons granulated sugar.</li>
+                <li>1 teaspoon vanilla extract.</li>
+            </ul>
 
-        <h3>For the zucchini muffins</h3>
-        <ul>
-            <li>1 1/2 cups (180g) all-purpose flour.</li>
-            <li>1 teaspoon baking powder.</li>
-            <li>1 teaspoon ground cinnamon.</li>
-            <li>1/2 teaspoon kosher salt.</li>
-            <li>1/2 teaspoon baking soda.</li>
-            <li>1/2 teaspoon ground ginger.</li>
-            <li>1/2 teaspoon ground nutmeg.</li>
-            <li>1/2 cup (113g) unsalted butter, melted.</li>
-            <li>1/3 cup (67g) granulated sugar.</li>
-            <li>1/3 cup (71g) packed light brown sugar.</li>
-            <li>1 large egg.</li>
-            <li>1 cup (about 180g) grated zucchini, packed.</li>
-            <li>2 tablespoons turbinado sugar, for sprinkling, optional.</li>
-        </ul>
+            <h3>For the zucchini muffins</h3>
+            <ul class="ingredients">
+                <li>1 1/2 cups (180g) all-purpose flour.</li>
+                <li>1 teaspoon baking powder.</li>
+                <li>1 teaspoon ground cinnamon.</li>
+                <li>1/2 teaspoon kosher salt.</li>
+                <li>1/2 teaspoon baking soda.</li>
+                <li>1/2 teaspoon ground ginger.</li>
+                <li>1/2 teaspoon ground nutmeg.</li>
+                <li>1/2 cup (113g) unsalted butter, melted.</li>
+                <li>1/3 cup (67g) granulated sugar.</li>
+                <li>1/3 cup (71g) packed light brown sugar.</li>
+                <li>1 large egg.</li>
+                <li>1 cup (about 180g) grated zucchini, packed.</li>
+                <li>2 tablespoons turbinado sugar, for sprinkling, optional.</li>
+            </ul>
 
-        <h2>Step by step</h2>
-        <ol>
-            <h3><li>Preheat the oven to 425°F.</li></h3>
-            <dl>
-                <dd><p>Position an oven rack in the center of the oven and preheat the oven to 425°F. Line a standard muffin pan with muffin liners.</p></dd>
-            </dl>
-            <h3><li>Make the cream cheese filling:</li></h3>
-            <dl>
-                <dd><p>In a small mixing bowl, whisk together the cream cheese, sugar, and vanilla extract until smooth and creamy, similar in thickness to peanut butter.</p></dd>
-            </dl>
-            <h3><li>Combine the dry ingredients:</li></h3>
-            <dl>
-                <dd><p>In a medium mixing bowl, whisk together the flour, baking powder, cinnamon, salt, baking soda, ginger, and nutmeg.</p></dd>
-            </dl>
-            <h3><li>Combine the wet ingredients:</li></h3>
-            <dl>
-                <dd><p>In a large mixing bowl, whisk together the melted butter, granulated sugar, and brown sugar until combined. Add the egg and whisk until it is fully incorporated. Stir in the grated zucchini until it is evenly distributed.</p></dd>
-            </dl>
-            <h3><li>Combine the wet and dry ingredients:</li></h3>
-            <dl>
-                <dd><p>Add the flour mixture to the zucchini mixture. Stir with a rubber spatula just until combined and no streaks of dry flour remain. The batter may seem slightly thicker than most muffin batters, but the zucchini will add a lot of moisture in the oven.</p></dd>
-            </dl>
-            <h3><li>Divide the batter:</li></h3>
-            <dl>
-                <dd><p>Use a cookie scoop or a couple of spoons to scoop a rounded tablespoon of batter into each muffin cup. Scoop a tablespoon of the cream cheese filling onto the batter. Divide the remaining muffin batter evenly between each muffin cup. You can use a spoon or a butter knife to ensure the batter completely encases the cream cheese filling or leave it be for more of a swirled layer.</p>
-                <p>Sprinkle 1/2 teaspoon of turbinado sugar on the top of each muffin, if using.</p></dd>
-            </dl>
-            <h3><li>Bake:</li></h3>
-            <dl>
-                <dd><p>Bake the muffins for 5 minutes at 425°F, then reduce the oven temperature to 350°F and continue baking for about 15 minutes longer. When they’re fully baked, the tops of the muffins will be matte and the edges will have started to brown.</p></dd>
-            </dl>
-            <h3><li> Cool the muffins and serve:</li></h3>
-            <dl>
-                <dd><p>Allow the muffins to cool in the pan for 5 minutes before transferring to a wire rack to cool for at least 10 minutes more. Serve warm or at room temperature.</p>
-                <p>Store cooled leftover muffins in an airtight container on the counter for up to 2 days or in the refrigerator for up to 1 week.</p></dd>
-            </dl>
-        </ol>
+            <h2>Step by step</h2>
+            <ol class="stepbystep">
+                <h3><li>Preheat the oven to 425°F.</li></h3>
+                <dl>
+                    <dd><p>Position an oven rack in the center of the oven and preheat the oven to 425°F. Line a standard muffin pan with muffin liners.</p></dd>
+                </dl>
+                <h3><li>Make the cream cheese filling:</li></h3>
+                <dl>
+                    <dd><p>In a small mixing bowl, whisk together the cream cheese, sugar, and vanilla extract until smooth and creamy, similar in thickness to peanut butter.</p></dd>
+                </dl>
+                <h3><li>Combine the dry ingredients:</li></h3>
+                <dl>
+                    <dd><p>In a medium mixing bowl, whisk together the flour, baking powder, cinnamon, salt, baking soda, ginger, and nutmeg.</p></dd>
+                </dl>
+                <h3><li>Combine the wet ingredients:</li></h3>
+                <dl>
+                    <dd><p>In a large mixing bowl, whisk together the melted butter, granulated sugar, and brown sugar until combined. Add the egg and whisk until it is fully incorporated. Stir in the grated zucchini until it is evenly distributed.</p></dd>
+                </dl>
+                <h3><li>Combine the wet and dry ingredients:</li></h3>
+                <dl>
+                    <dd><p>Add the flour mixture to the zucchini mixture. Stir with a rubber spatula just until combined and no streaks of dry flour remain. The batter may seem slightly thicker than most muffin batters, but the zucchini will add a lot of moisture in the oven.</p></dd>
+                </dl>
+                <h3><li>Divide the batter:</li></h3>
+                <dl>
+                    <dd><p>Use a cookie scoop or a couple of spoons to scoop a rounded tablespoon of batter into each muffin cup. Scoop a tablespoon of the cream cheese filling onto the batter. Divide the remaining muffin batter evenly between each muffin cup. You can use a spoon or a butter knife to ensure the batter completely encases the cream cheese filling or leave it be for more of a swirled layer.</p>
+                    <p>Sprinkle 1/2 teaspoon of turbinado sugar on the top of each muffin, if using.</p></dd>
+                </dl>
+                <h3><li>Bake:</li></h3>
+                <dl>
+                    <dd><p>Bake the muffins for 5 minutes at 425°F, then reduce the oven temperature to 350°F and continue baking for about 15 minutes longer. When they’re fully baked, the tops of the muffins will be matte and the edges will have started to brown.</p></dd>
+                </dl>
+                <h3><li> Cool the muffins and serve:</li></h3>
+                <dl>
+                    <dd><p>Allow the muffins to cool in the pan for 5 minutes before transferring to a wire rack to cool for at least 10 minutes more. Serve warm or at room temperature.</p>
+                    <p>Store cooled leftover muffins in an airtight container on the counter for up to 2 days or in the refrigerator for up to 1 week.</p></dd>
+                </dl>
+            </ol>
+        </div>
     </body>
 </html>
